package com.lld.problems.atm.code.constants;

public enum Status {
    SUCCESS,
    FAILURE
}
