@startuml
title ATM Machine — Class Diagram (final, synced to code)

class ATM {
    -card: Card
    -currentState: ATMState
    -inventory: CashInventory
    -retryAttempt: int
    -transaction: Transaction
    -receipt: Receipt

    +insert(card: Card): void
    +enterPin(pin: int): void
    +enterAmount(amount: int): void
    +eject(): void
    +setState(state: ATMState): void
}

interface ATMState {
    +insert(card: Card, atm: ATM): void
    +enterPin(pin: int, atm: ATM): void
    +enterAmount(amount: int, atm: ATM): void
    +eject(atm: ATM): void
}

class IdleState {
}

class PinEntryState {
}

class AmountEntryState {
}

class DispenseService {
    +dispense(amount: int, atm: ATM): void
}

class Card {
    -accountName: String
    -cardNumber: int
    -accountNumber: int
    -pin: int
}

class CashInventory {
    -availableAmount: int

    +isSufficientAmount(amount: int): boolean
    +deductAmount(amount: int): void
    +getAvailableAmount(): int
}

class Receipt {
    -amount: int
    -accountName: String
    -accountNumber: int
    -date: LocalDate
}

class Transaction {
    -amount: int
    -timestamp: LocalDateTime
    -status: Status

    +record(status: Status, amount: int): void
}

enum Status {
    SUCCESS
    FAILURE
}

ATM *-- ATMState
ATM *-- CashInventory
ATM *-- Receipt
ATM *-- Transaction
ATM o-- Card
IdleState ..|> ATMState
PinEntryState ..|> ATMState
AmountEntryState ..|> ATMState
AmountEntryState ..> DispenseService
DispenseService ..> CashInventory
DispenseService ..> Transaction
DispenseService ..> Receipt
Transaction --> Status

@enduml